--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{username}.github.io/sorting_visualizer",
+  "homepage": "http://{username}.github.io/Sorting_Algo_Visualizer",
   "name": "sorting_visualizer",
   "version": "0.1.0",
   "private": true,
